2016-02-16  Oliver Lemke  <olemke@core-dump.info>

	* doc/requirements.rtd: Removed again. The automatic build
	of the documentation through the readthedocs.org service fails if
	additional packages such as netCDF4 are required. Although packages can
	be set as requirements for the build, the pip install in their
	virtualenv fails in this case due to lack of HDF5. Similar problems
	will most likely occur later for other packages (e.g. basemap).

	This makes the readthedocs service useless for our purposes. The typhon
	docs have moved with immediate effect to

	http://www.radiativetransfer.org/misc/typhon/doc/

	instead. That gives us much more flexibility. The rtd project has been
	removed.

2016-02-16  Oliver Lemke  <olemke@core-dump.info>

	* doc/requirements.rtd: Add requirements file for build on readthedocs.

2016-02-15  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/_build: Ignore subdirectory plot_directive.

	* doc/cm.rst: Included colormap gallery and example plots.

	* doc/conf.py: Load matplotlib extension for documentation.

	* doc/pyplots: Scripts and data to create example plots.

	* doc/pyplots/_data, doc/pyplots/_data/test_data.nc:

	Directory to store data for example plots. Currently containing a netCDF4
	file with some atmospheric variables.

	* doc/pyplots/cm_gallery.py, doc/pyplots/plot_density.py,
	doc/pyplots/plot_phase.py, doc/pyplots/plot_qualitative1.py,
	doc/pyplots/plot_qualitative2.py, doc/pyplots/plot_speed.py,
	doc/pyplots/plot_temperature.py:

	Scripts to create plots for the example gallery.

2016-02-13  Lukas Kluft <lukas.kluft@gmail.com>

	* typhon/cm/__init__.py (mpl_colors):

	Added default values for parameters. If no parameter is given, the function
	will return 10 RGB color specifications for the default colormap.

2016-02-13  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/cm.rst: Fixed documentation for cm module.

	* typhon/cm/__init__.py:

	Added function mpl_colors which returns a given number of RGB tuples from a
	colormap.
